--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -109,7 +109,9 @@
                 </div>
                 <div class="project-details">
                     <h3>Description</h3>
-                    <p>{{top_project.project_desc}}</p>
+                    <div class="project-description-container">
+                        <p>{{top_project.project_desc}}</p>
+                    </div>
                     <h3>Project Manager</h3>
                     <p>{{top_project.project_manager}}
                     <h3>Team</h3>
@@ -122,8 +124,8 @@
                     </p>
                     <div class="details-row">
                         <div>
-                            <h3>Total Hours Spent</h3>
-                            <p>{{ top_project.total_hours|default:"-" }}</p>
+                            <h3>Start Date</h3>
+                            <p>{{ top_project.start_date|default:"-" }}</p>
                         </div>
                         <div>
                             <h3>Deadline</h3>
