fix: organization + admin(back buttons)

--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_edit_project_details.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_edit_project_details.html
@@ -79,7 +79,7 @@
                 <div class="adminedit-card adminedit-details-card">
                     <div class="adminedit-card-header">
                         <h2>Edit Project Details</h2>
-                        <a href="#" class="adminedit-back-link">&#8592; Back</a>
+                        <a href="{% url 'core:admin_project_page' %}" class="adminedit-back-link">&#8592; Back</a>
                     </div>
                     <div class="adminedit-details-section">
                         <div class="adminedit-row">
