--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -114,11 +114,17 @@
                     <p>{{top_project.project_manager}}
                     <h3>Team</h3>
                     <p>
-                        {% for member in top_project.members.all %}
-                            {{member.member_name}}{% if not forloop.last %}, {% endif %}
-                        {% empty %}
-                            No members assigned.
-                        {% endfor %}
+                        {% with total=top_project.members.count %}
+                            {% for member in top_project.members.all %}
+                                {% if forloop.counter <= 3 %}
+                                    {{ member.member_name }}{% if forloop.counter < 3 and forloop.counter < total %}, {% endif %}
+                                {% elif forloop.counter == 4 %}
+                                    and {{ total|add:"-3" }} others
+                                {% endif %}
+                            {% empty %}
+                                No members assigned.
+                            {% endfor %}
+                        {% endwith %}
                     </p>
                     <div class="details-row">
                         <div>
@@ -171,7 +177,7 @@
                             <p class="status" style="color: #6AFF3C">{{project.project_status}}</p>
                             {% elif project.project_status == 'Ongoing' %}
                             <p class="status" style="color: orange">{{project.project_status}}</p>
-                            {% elif project.project_status == 'Missed' %}
+                            {% elif project.project_status == 'Missing' %}
                             <p class="status" style="color: red">{{project.project_status}}</p>
                             {% endif %}
 
